feat: add jwt auth strategy
